# predict-os-be-axum

./: .env.example  .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: analyze_event_markets.rs  limit_order_bot.rs  mod.rs  polyfactual_research.rs  position_tracker.rs
src/clients/: dome.rs  mod.rs  polyfactual.rs  polymarket.rs
src/clients/ai/: grok.rs  mod.rs  openai.rs  prompts.rs
